--- a/V2rayNG/app/src/main/res/values-zh-rTW/strings.xml
+++ b/V2rayNG/app/src/main/res/values-zh-rTW/strings.xml
@@ -179,7 +179,7 @@
 
     <string name="title_core_loglevel">記錄層級</string>
     <string name="title_mode">模式</string>
-    <string name="title_mode_help">輕觸以檢視說明</string>
+    <string name="title_mode_help">（这是什么呢？我写在项目主页了～点击前往）</string>
     <string name="title_language">語言</string>
     <string name="title_ui_settings">使用者介面設定</string>
 
