--- a/V2rayNG/app/src/main/res/values-zh-rCN/strings.xml
+++ b/V2rayNG/app/src/main/res/values-zh-rCN/strings.xml
@@ -105,7 +105,7 @@
 
     <string name="title_mux_settings">Mux 多路复用 设置</string>
     <string name="title_pref_mux_enabled">启用 Mux 多路复用</string>
-    <string name="summary_pref_mux_enabled">减低延时，但可能会断流，建议不要启用。\nTCP，UDP 及 QUIC 流量处理方式下方可选。</string>
+    <string name="summary_pref_mux_enabled">减低延时，但可能会断流，建议不要启用。\n（TCP，UDP 及 QUIC 流量处理方式下方可选）</string>
     <string name="title_pref_mux_concurency">TCP 复用子链接数（可填 -1 至 1024）</string>
     <string name="title_pref_mux_xudp_concurency">XUDP 复用子链接数（可填 -1 至 1024）</string>
     <string name="title_pref_mux_xudp_quic">QUIC 流量处理方式</string>
@@ -189,7 +189,7 @@
     <string name="title_service_restart">重启服务</string>
     <string name="title_del_all_config">删除全部配置</string>
     <string name="title_del_duplicate_config">删除重复配置</string>
-    <string name="title_del_invalid_config">删除无效配置(先测试，再点我～)</string>
+    <string name="title_del_invalid_config">删除无效配置(先测试，再点我)</string>
     <string name="title_export_all">导出全部(非自定义)配置至剪贴板</string>
     <string name="title_sub_setting">订阅分组设置</string>
     <string name="sub_setting_remarks">备注</string>
