--- a/V2rayNG/app/src/main/res/values/strings.xml
+++ b/V2rayNG/app/src/main/res/values/strings.xml
@@ -69,7 +69,7 @@
     <string name="server_lab_spider_x" translatable="false">SpiderX</string>
     <string name="server_lab_secret_key" translatable="false">SecretKey</string>
     <string name="server_lab_reserved">Reserved(Optional)</string>
-    <string name="server_lab_local_address">Local address (optional IPv4/IPv6, separated by commas)</string>
+    <string name="server_lab_local_address">Local address (optional IPv4/v6, separated by commas)</string>
     <string name="server_lab_local_mtu">Mtu(optional, default 1420)</string>
     <string name="toast_success">Success</string>
     <string name="toast_failure">Failure</string>
