--- a/YiLink/app/src/main/res/values/strings.xml
+++ b/YiLink/app/src/main/res/values/strings.xml
@@ -8,7 +8,8 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="migration_success">Data migration success!</string>
     <string name="migration_fail">Data migration failed!</string>
-
+    <string name="app_namech" translatable="false">YiLink 依链</string>
+    <string name="xyc">Made for My best Xyc～</string>
     <!-- Notifications -->
     <string name="notification_action_stop_v2ray">Stop</string>
     <string name="toast_permission_denied">Unable to obtain the permission</string>
