--- a/YiLink/app/src/main/res/values-zh-rCN/strings.xml
+++ b/YiLink/app/src/main/res/values-zh-rCN/strings.xml
@@ -2,15 +2,15 @@
 <resources>
     <string name="app_widget_name">开关</string>
     <string name="app_tile_name">开关</string>
-    <string name="app_tile_first_use">初次使用此功能请先用APP添加配置</string>
+    <string name="app_tile_first_use">初次使用此功能请先添加配置</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="migration_success">数据迁移成功!</string>
-    <string name="migration_fail">数据迁移失败啦!</string>
+    <string name="migration_fail">数据迁移失败!</string>
 
     <!-- Notifications -->
     <string name="notification_action_stop_v2ray">停止</string>
-    <string name="toast_permission_denied">无法取得权限</string>
+    <string name="toast_permission_denied">权限获取失败</string>
     <string name="notification_action_more">点击了解更多</string>
     <string name="toast_services_start">启动服务中</string>
     <string name="toast_services_stop">关闭中</string>
